# ui

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .mcp.json  .taurignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  PLAN_NEW_COMPONENTS.md  PLAN_RTL.md  README.md  __DisableContentInsetAdjustment.m  __HideKeyboardAccessory.m  _typos.toml  biome.json  clippy.toml  docker-compose.prod.yml  justfile  leptosfmt.toml  nginx.conf  package.json  rustfmt.toml  win_leptos_fix.md
app/: Cargo.toml  build.rs
app/src/: MARKDOWN.md  app.rs  lib.rs  shell.rs  sidenav_shortfix_all_blocks.rs
app/src/__registry__/: all_blocks.rs  demos_sidenav.rs  mod.rs  my_command_bar_constants.rs  static_md_registry.rs
app/src/components/: app_footer.rs  app_header.rs  command_search_docs.rs  command_search_docs.txt  dioxus_link.rs  github_stars.rs  mod.rs  newsletter_signup.rs  shared_sidenav_demos.rs  sticky_footer.rs  table_of_contents.rs
app/src/components/_sonner_leptos_only_later/: mod.rs  toast.rs  toast_container.rs  toast_id.rs  toast_theme.rs  toaster.css  toaster.rs  types.rs
app/src/components/logos/: _ferris.rs  ever_ui.rs  evermint.rs  mod.rs
app/src/components/navigation/: app_wrapper.rs  header_docs.rs  header_home.rs  mod.rs  nav_desktop.rs  nav_mobile.rs
app/src/domain/: mod.rs
app/src/domain/blocks/: block_entry.rs  mod.rs
app/src/domain/bug_report/: bug_reports.rs  bug_reports_sqlite.rs  mod.rs  page_bug_reports.rs
app/src/domain/charts/: mod.rs
app/src/domain/create/: mod.rs  page_create.rs  preset.rs
app/src/domain/icons/: mod.rs  page_icons.rs
app/src/domain/markdown_ui/: api_read_md.rs  mod.rs
app/src/domain/tests/: drawer_tofix.rs  mod.rs  page_css_tricks.txt  page_tailwind_latest.txt  page_test.rs  page_to_fix.rs
app/src/domain/themes/: mod.rs  themes_blocks.rs
app/src/domain/views/: mod.rs  view_router.rs  views_layout.rs
app/src/registry/: mod.rs
app/src/registry/md_docs/: docs_installation_cli_tree_view.rs  mod.rs
app/src/routes/: mod.rs  page_charts.rs  page_download.rs  page_home.rs  page_home_sparkles.rs  page_not_found.rs
app/src/utils/: client_diagnostic_handler.rs  mod.rs  page_transition.rs
app_crates/app_components/: Cargo.toml
app_crates/app_components/src/: announcement_badge.rs  app_bottom_nav.rs  footer_layout.rs  icons_attractor.rs  lib.rs  logo_home_link.rs  my_reactive_indicator.rs  my_tailwind_indicator.rs  suggest_components.rs  tabs_with_show.rs  tree_view.rs
app_crates/app_domain/: Cargo.toml
app_crates/app_domain/src/: lib.rs
app_crates/app_domain/src/constants/: mod.rs  route_paths.rs
app_crates/app_domain/src/icons/: all_icons.rs  mod.rs
app_crates/app_domain/src/markdown_config/: mod.rs  registry_entry.rs
app_crates/app_domain/src/themes/: mod.rs
app_crates/app_domain/src/utils/: mod.rs  param.rs
app_crates/registry/: Cargo.toml
app_crates/registry/src/: lib.rs
app_crates/registry/src/blocks/: chat01.rs  chat02.rs  chat03.rs  chat04.rs  chat05.rs  chat06.rs  chat07.rs  faq01.rs  faq02.rs  faq03.rs  footer01.rs  footer02.rs  footer03.rs  footer04.rs  footer05.rs  footer_logos.rs  header01.rs  integration01.rs  integration02.rs  integration03.rs  integration04.rs  integration05.rs  integration06.rs  integration07.rs  login01.rs  login02.rs  login03.rs  login04.rs  mod.rs  pricing01.rs  pricing02.rs  pricing03.rs  pricing04.rs  pricing05.rs  pricing06.rs  pricing07.rs  pricing08.rs  pricing09.rs  pricing10.rs  pricing11.rs  (+15 more)
app_crates/registry/src/charts/: area_chart_01.rs  area_chart_02.rs  area_chart_03.rs  area_chart_04.rs  area_chart_05.rs  area_chart_06.rs  area_chart_07.rs  area_chart_08.rs  area_chart_09.rs  area_chart_10.rs  area_chart_11.rs  area_chart_placeholder.rs  bar_chart_01.rs  line_chart_01.rs  mod.rs  pie_chart_01.rs  radar_chart_01.rs  radial_chart_01.rs
app_crates/registry/src/constants/: mod.rs
app_crates/registry/src/demos/: demo_accordion.rs  demo_accordion_bordered.rs  demo_accordion_card.rs  demo_accordion_icons.rs  demo_accordion_rtl.rs  demo_alert.rs  demo_alert_colors.rs  demo_alert_dialog.rs  demo_alert_dialog_media.rs  demo_alert_dialog_rtl.rs  demo_alert_dialog_small.rs  demo_alert_dialog_small_media.rs  demo_alert_rtl.rs  demo_animate.rs  demo_animate_group.rs  demo_aspect_ratio.rs  demo_aspect_ratio_portrait.rs  demo_aspect_ratio_square.rs  demo_attachment.rs  demo_attachment_group.rs  demo_attachment_image.rs  demo_attachment_sizes.rs  demo_attachment_states.rs  demo_attachment_trigger.rs  demo_auto_form.rs  demo_avatar.rs  demo_avatar_badge.rs  demo_avatar_badge_icon.rs  demo_avatar_group.rs  demo_avatar_group_count.rs  demo_avatar_group_count_icon.rs  demo_avatar_rtl.rs  demo_avatar_size.rs  demo_badge.rs  demo_badge_colors.rs  demo_badge_custom.rs  demo_badge_rtl.rs  demo_badge_variants.rs  (+284 more)
crates/_markdown_crate/: Cargo.toml
crates/_markdown_crate/src/: frontmatter.rs  highlight_code.rs  highlight_language.rs  html_converter.rs  html_highlighter_to_remove_when_possible.rs  lib.rs  toml_highlighter.rs  utils.rs
crates/autoform/: Cargo.toml  README.md
crates/autoform/src/: lib.rs
crates/icons/: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  REDUCE_CRATE_SIZE.md  auto-publish.sh  leptosfmt.toml
crates/icons/src/: lib.rs
crates/leptos_ui/: CLAUDE.md  Cargo.toml  LICENSE  README.md  auto-publish.sh  rustfmt.toml
crates/leptos_ui/src/: clx.rs  lib.rs  utils.rs  variants.rs
crates/tw_merge/tw_merge/: Cargo.toml
crates/tw_merge_variants/: Cargo.toml  README.md
crates/tw_merge_variants/src/: model.rs  variant_macro.rs
crates/ui-cli/: .gitignore  Cargo.toml  PLAN_HANDLE_DIOXUS.md
crates/ui-cli/src/: lib.rs  main.rs
e2e/: README.md  (+2 more)
server/: Cargo.toml
server/src/: main.rs
server/src/middlewares/: cache_control.rs  canonical_redirect.rs  deprecated_routes.rs  log_requests.rs  mod.rs
src-tauri/: Cargo.toml  offline.html  tauri.conf.json  tauri.conf.offline.json  tauri.ios.conf.json  tauri.ios.dev.conf.json
src-tauri/icons/: icon.icns
src-tauri/ios-icons/: Contents.json
src-tauri/src/: lib.rs  main.rs  production.rs
(+1115 files in other folders)
