cargo-features = ["trim-paths"]

[package]
name = "rust_ui_tauri"
version = "0.1.0"
description = "A Desktop wrapper for Rust/UI"
edition = "2024"

[features]
default = []
tauri = []
devtools = ["tauri/devtools"]  # Only enable in dev builds

[lib]
name = "rust_ui_tauri"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
tauri = { version = "2.9", features = [] }
tauri-plugin-opener = "2.5"

# Binary size optimizations (https://v2.tauri.app/concept/size/)
[profile.release]
codegen-units = 1    # Better LLVM optimizations (slower compile)
lto = true           # Link-time optimization across crates
opt-level = "s"      # Optimize for size ("3" for speed)
panic = "abort"      # Remove panic unwinding overhead
strip = true         # Remove debug symbols
trim-paths = "all"   # Remove privileged path info (nightly)
