[package]
name = "registry"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[features]
default = []
ssr = ["tokio"]

[dependencies]
autoform.workspace = true
icons.workspace = true
leptos_ui.workspace = true
tw_merge.workspace = true

leptos.workspace = true
leptos_router.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
time.workspace = true
validator.workspace = true
js-sys.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys.workspace = true
heck.workspace = true

# Optional SSR dependencies
# TODO: tokio is only used for Shimmer demo delay simulation. Consider removing later.
tokio = { workspace = true, optional = true }
