[package]
name = "markdown_crate"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos_ui = { version = "0.3", optional = true }
tw_merge = { version = "0.1", features = ["variant"], optional = true }

pulldown-cmark = "0.13"
html-escape = "0.2"

syntect = { version = "5.2", default-features = false, features = ["default-fancy", "regex-fancy"] }


leptos = { version = "0.8", features = ["nightly"], optional = true }
html_parser = { version = "0.7", optional = true }
paste = { version = "1", optional = true }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
strum = { version = "0.27", features = ["derive"] }

[features]
default = []
ssr = []
leptos = ["dep:leptos", "dep:html_parser", "dep:leptos_ui", "dep:tw_merge", "dep:paste"]